TL-28091 theme_legacy: Fixed workspace names on recently viewed dashboard block in the wrong colour

--- a/server/theme/legacy/scss/blocks/totara_recently_viewed/totara_recently_viewed.scss
+++ b/server/theme/legacy/scss/blocks/totara_recently_viewed/totara_recently_viewed.scss
@@ -283,7 +283,7 @@
         border-radius: var(--border-radius-normal);
       }
 
-      .block-trv-title {
+      .block-trv-title a {
         color: var(--color-neutral-1);
       }
 
